<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".CreateHabitActivity"
        android:padding="8dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/eat_an_apple"/>

        <EditText
            android:id="@+id/et_descr"
            android:inputType="textMultiLine"
            android:lines="2"
            android:hint="@string/eat_an_apple_a_day_keeps_the_doctor_away"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_choose_image"
            android:onClick="chooseImage"
            android:text="@string/choose_an_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/iv_image"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/select_an_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_save"
        android:onClick="storeHabit"
        android:text="@string/save_habit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_error"
            android:visibility="invisible"
            android:textColor="#880000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>